# GBTools

./: .gitignore  CMakeLists.txt  a.out  main.s  run.sh
asm/: cpu.s  defs.s  memory.s  memoryMacros.s  test.s
asm/linux/: GlobalFuncs.s
asm/windows/: GlobalFuncs.s
include/: CPU.h
src/: CPU.cpp  main.cpp
